# webdir

./: Cargo.toml  README.md
src/: cli.rs  http_server.rs  main.rs  templates.rs
templates/: directory.html  not_found.html
