[package]
name = "webdir"
version = "0.1.0"
edition = "2021"
authors = ["OdinSrc"]
repository = "https://github.com/OdinSrc/webdir.git"
keywords = ["static", "directory", "python", "server", "http"]
categories = ["command-line-utilities"]
readme = "README.md"
license-file = "LICENSE.txt"
description = "A simple HTTP web server to serve directory"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
axum = "0.6.12"
clap = "4.1.13"
false = "0.0.0"
tokio = { version = "1.26.0", features = ["io-std", "full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs", "trace", "full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
